[package]
name = "rtb-rs-tester"
version = "0.1.0"
authors = ["Charles Saracco <crsaracco@gmail.com>"]
edition = "2018"

[dependencies]
vst = { path = "/home/crs/git/github/rust-vst/" }
rtb-rs = { path = "/home/crs/git/github/rtb-rs/" }
log = "0.4"
simplelog = "^0.5.0"

[lib]
name = "rtbrstester"
crate-type = ["cdylib"]