[package]
name = "rtb-rs-tester"
version = "0.1.0"
authors = ["Charles Saracco <crsaracco@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/crsaracco/rust-vst.git", branch = "open-editor-return-1-for-success" }
#rtb-rs = { git = "https://github.com/rust-dsp/rtb-rs.git" }
#vst = { path = "/home/crs/git/github/rust-vst/" }
rtb-rs = { path = "/home/crs/git/rtb-rs/rtb-rs/" }
log = "0.4"
simplelog = "^0.5.0"

[lib]
name = "rtbrstester"
crate-type = ["cdylib"]